change  jetty  settings